[FE] feat: Implement tenantDetail dashboard and personal tab
